syntax = "proto3";

package app.v1;

import "google/type/datetime.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message App {
  string id = 1;
  string name = 2;
  string org_id = 4;
  string created_by_id = 5;
  google.type.DateTime created_at = 6;
  google.type.DateTime updated_at = 7;
}

message GetAppRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
}

message GetAppResponse {
  App app = 1;
}

message GetAppsByOrgRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
}

message GetAppsByOrgResponse {
  repeated App apps = 1;
}

message DeleteAppRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
}

message DeleteAppResponse {
  bool deleted = 1;
}

message UpsertAppRequest {
  string id = 1 [
    (validate.rules).string = {
      len: 26,
      ignore_empty: true
    },
    (tagger.tags) = "faker:\"-\" shortid:\"ensure\""
  ];
  string name = 2;
  string org_id = 3 [
    (validate.rules).string = {
      len: 26,
      ignore_empty: true
    },
    (tagger.tags) = "faker:\"shortID\" shortid:\"ensure\""
  ];
  string created_by_id = 5;

  string override_id = 6;
}

message UpsertAppResponse {
  App app = 1;
}
